--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,18 @@
 	</script>
 
 	<script src="//localhost:35729/livereload.js"></script>
+
+	<link href="/resources/css.css" media="screen" rel="stylesheet" type="text/css" />
+	<meta name="google-site-verification" content="MyNePgPoKL2FkR070Lj1pIT8Or7gERZiobVzjG0PtOk" />
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-400436-21', 'auto');
+		ga('send', 'pageview');
+	</script>
 </head>
 <body>
 <div id="wrap">
@@ -48,6 +60,9 @@
 						<a href="/user/signin" class="signin_caller" data-i18n="Sign In">Sign In</a>
 					</li>
 					<li class="header_is_signed_in" style="display: none;">
+						<a href="/profile" data-i18n="Settings">Settings</a>
+					</li>
+					<li class="header_is_signed_in" style="display: none;">
 						<a href="/user/logout" class="signout_caller" data-i18n="Log Out">Log Out</a>
 					</li>
 					<li>
@@ -62,13 +77,6 @@
 
 
 	<div class="container" id="container">
-
-		<div id="fill_profile_invitation" style="display: none;">
-			<div class="alert alert-info">
-			<span data-i18n="Please don't forget to let us know your email address, so you can sign in to DimeShift on your next visit">Please don't forget to let us know your email address, so you can sign in to DimeShift on your next visit</span>. <a href="/user/fillprofile" class="btn btn-primary btn-xs" data-i18n="Do it">Do it</a>
-			</div>
-		</div>
-
 		<div class="page_holder" id="page_holder_1"></div>
 		<div class="page_holder" id="page_holder_2"></div>
 	</div>
@@ -77,7 +85,6 @@
 </div>
 
 	<div id="preloader"></div>
-
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 	<script src="/resources/js.js" type="text/javascript"></script>
 </body>
