--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,9 @@
 	<script src="//localhost:35729/livereload.js"></script>
 
 	<link href="/resources/css.css" media="screen" rel="stylesheet" type="text/css" />
-	<meta name="google-site-verification" content="MyNePgPoKL2FkR070Lj1pIT8Or7gERZiobVzjG0PtOk" />
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-400436-21', 'auto');
-		ga('send', 'pageview');
-	</script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.17/c3.min.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.17/c3.min.js"></script>
 </head>
 <body>
 <div id="wrap">
