--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>DimeShift</title>
+	<title>Sofi Path</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel='icon' href='/images/favicon.ico' type='image/x-icon' />
 	<s></style>
@@ -97,7 +97,7 @@
 	<footer id="footer" role="contentinfo">
 		<div class="container">
 			<div class="pull-right">
-				<a href="https://github.com/jeka-kiselyov/dimeshift" data-i18n="View Source on GitHub">View Source on GitHub</a>
+				<a href="https://github.com/sofi-psong/path" data-i18n="View Source on GitHub">View Source on GitHub</a>
 			</div>
 			<p class="muted credit"><span data-i18n="Copyright" class="hidden-xs hidden-sm">Copyright</span><span class="visible-xs-inline visible-sm-inline">&copy;</span> 2017 <a href="http://dimeshift.com">DimeShift</a><span class="hidden-xs hidden-sm">.</span> <span data-i18n="GNU Affero GPL License" class="hidden-xs hidden-sm">GNU Affero GPL License</span></a> </p>
 		</div>
